<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="347dp"
        android:layout_height="98dp"
        android:text="Choisissez une catégorie"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/btnPolicier"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="21dp"
        android:insetTop="4dp"
        android:textColor="@color/jaune"
        android:text="@string/txtBtnPolicier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnDocu"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="21dp"
        android:textColor="@color/rouge"
        android:text="@string/txtBtnDocumentaire"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFiction" />

    <Button
        android:id="@+id/btnSerie"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="21dp"
        android:textColor="@color/vert"
        android:text="@string/txtBtnSerie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDocu" />

    <Button
        android:id="@+id/btnFiction"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtBtnFiction"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPolicier" />

</androidx.constraintlayout.widget.ConstraintLayout>