<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reservation">

    <TextView
        android:id="@+id/txtReservation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="21dp"
        android:text="Réservation"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtReserver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="21dp"
        android:text="@string/txtReserver"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtReservation" />

    <Button
        android:id="@+id/btnConfirmerResa"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="164dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/txtbtnConfirmer"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRetourReservations"
        app:layout_constraintEnd_toStartOf="@+id/btnAnnuler"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAnnuler"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="164dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/txtbtnAnnuler"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btnRetourReservations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnConfirmerResa" />

    <Button
        android:id="@+id/btnRetourReservations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="44dp"
        android:text="Retour"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>